--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dayjs": "^1.11.10",
+    "prettier": "3.0.3"
   }
 }
