--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mnikitos2006.github.io/",
+  "homepage": "https://mnikitos2006.github.io/taskmanager",
   "name": "taskmanager",
   "version": "0.1.0",
   "private": true,
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "dayjs": "^1.11.10",
+    "gh-pages": "^6.0.0",
     "prettier": "3.0.3"
   }
 }
