--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mnikitos2006.github.io/taskmanager",
+  "homepage": "https://github.com/mnikitos2006/taskmanager2.git",
   "name": "taskmanager",
   "version": "0.1.0",
   "private": true,
