TaskManager By NIKITA

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mnikitos2006.github.io/taskmanager2",
+  "homepage": "https://mnikitos2006.github.io/kursovoy",
   "name": "taskmanager",
   "version": "0.1.0",
   "private": true,
